<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="125dp"
                        android:background="@color/primaryColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/layout_back_white"
                        android:orientation="horizontal">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="100dp"
                            android:paddingBottom="16dp">

                            <LinearLayout
                                android:id="@+id/linearLayout2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:background="@drawable/text_drawable"
                                android:gravity="center_horizontal|center_vertical"
                                android:orientation="horizontal"
                                android:padding="5dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/reward_points"
                                    android:textColor="@color/white"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/constraintLayout"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@drawable/layout_background"
                                android:gravity="center_horizontal|center_vertical"
                                android:padding="8dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/add_money_btn"
                                    android:layout_width="125dp"
                                    android:layout_height="105dp"
                                    android:layout_weight="1"
                                    android:background="@android:color/transparent"
                                    android:drawableTop="@drawable/ic_baseline_card_giftcard_24"
                                    android:paddingLeft="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingRight="16dp"
                                    android:paddingBottom="5dp"
                                    android:text="@string/add_money"
                                    android:textColor="#00838F"
                                    app:icon="@drawable/ic_baseline_currency_rupee_24"
                                    app:iconGravity="top" />

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/reedem_btn"
                                    android:layout_width="125dp"
                                    android:layout_height="105dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_weight="1"
                                    android:background="@android:color/transparent"
                                    android:drawableTop="@drawable/ic_baseline_account_balance_24"
                                    android:paddingLeft="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingRight="16dp"
                                    android:paddingBottom="5dp"
                                    android:text="@string/reedem_credit_str"
                                    android:textColor="#00838F"
                                    app:icon="@drawable/ic_baseline_card_giftcard_24"
                                    app:iconGravity="top" />

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/send_money_btn"
                                    android:layout_width="125dp"
                                    android:layout_height="105dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_weight="1"
                                    android:background="@android:color/transparent"
                                    android:drawableTop="@drawable/ic_baseline_account_balance_24"
                                    android:paddingLeft="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingRight="16dp"
                                    android:paddingBottom="5dp"
                                    android:text="@string/send_money_str"
                                    android:textColor="#00838F"
                                    app:icon="@drawable/ic_baseline_account_balance_24"
                                    app:iconGravity="textTop" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="26dp"
                                android:text="@string/transaction_str"
                                android:textColor="#00796B"
                                android:textSize="18sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="75dp"
                                android:text="@string/transaction_history"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="210dp"
                        android:background="@color/primaryColor"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/image_description"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/imageProfile"
                    android:layout_width="350dp"
                    android:layout_height="175dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/border_drawable"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/default_balance_value"
                            android:textColor="@color/white"
                            android:textSize="34sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/available_balance_str"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/image_stroke"
                            android:contentDescription="@string/points_img"
                            android:padding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2"
                            app:srcCompat="@drawable/ic_payment_p" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/points_str"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="@+id/imageView3" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/reward_points_str"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                        <LinearLayout
                            android:id="@+id/transfer_money_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_drawable"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="horizontal"
                            android:padding="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/transfer_money_str"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/action_back"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_str"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

